src/main/resources/static/styles/main.css
@font-face {
    font-family: virusIcons;
    src: url("/fonts/Zygoponent-Regular.woff") format("woff");
}
@font-face {
    font-family: Zygote;
    src: url("/fonts/ZygoteVector-Regular.woff") format("woff");
}
body {
    font-family: Helvetica, Arial;
    font-size: 12px;
    margin: 0px;
    padding: 0px;
}
input {
    font-family: Helvetica, Arial;
}
virusIcons {
    font-family: virusIcons;
    text-align: left;
    width: 100%;
    right: 0px;
    box-sizing: border-box;
    position: absolute;
    display: flex;
}
.parameters p {
    display: inline-block;
    position: relative;
}
.parameters td, .parameters th {
    height: 21px;
    border: 2px solid black;
    padding: 8px;
    padding-top: 3px;
    padding-bottom: 3px;
    text-align: left;
}
table {
    float: left;
    border-collapse: collapse;
    table-layout: fixed;
    white-space: nowrap;
}
.error {
    color: red;
}
.frontLayer {
    position: relative;
    z-index: 1;
}
.fontSizeInput {
    min: 12;
    step: 12;
}
input[type=text] {
    border: 0;
}
input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}
.numberInput {
    box-sizing: border-box;
    width: 70px;
    position: relative;
    z-index: 2;
    border: 0;
    font-size: 12px;
    -moz-appearance: textfield;
}
.numberInput:focus {
    outline: 0;
}
.percentageText {
    box-sizing: border-box;
    width: 70px;
    position: relative;
    z-index: 2;
    border: 0;
    font-size: 12px;
    -moz-appearance: textfield;
}
.percentageText:focus {
    outline: 0;
}
.percentageText {
    display: none;
}
.keyButton {
    font-size: 12px;
    position: relative;
    z-index: 2;
    width: 100%;
    background: none;
    border: none;
    text-align: left;
    padding: 0px;
}
.keyButton:hover {
    cursor: pointer;
}
.keyButton:focus {
    outline: 0;
}
.hoverSelect:hover {
    background: Gainsboro;
}
textarea {
    font-family: Zygote, Helvetica, Arial;
    width: 100%;
    min-height: 400px;
    box-sizing: border-box;
    position: absolute;
    right: 0px;
    padding: 16px;
    padding-top: 0px;
    resize: none;
    border: none;
    font-size: 22px;
    font-size: 100px;
    color: black;
    overflow: hidden;
    outline: none;
    z-index: 1;
    background-color: rgba(0, 0, 0, 0);
    caret-color: black;
}
#layers {
    position: relative;
    top: -45px;
}
.valuePadding {
  border: 0px inset #ccc;
}
#choose, #chooseLabel, #random, #randomLabel {
    float: left;
    padding-right: 8px;
}
#characterEntry {
    position: relative;
    z-index: 2;
    font-size: 12px;
    width: 80px;
}
#characterEntry:focus {
    outline: 0;
}
span {
    white-space: break-spaces;
}
span.blueOne {
    color: #33cccc;
}
span.redTwo {
    color: #ff3300;
}
span.redThree {
    color: #dd1133;
}
span.pinkFour {
    color: #ff00cc;
}
span.brownFive {
    color: #aa6666;
}
span.brownSix {
    color: #993300;
}
span.blueSeven {
    color: #336666;
}

